# tanomude

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  README.ja.md  README.md  docker-compose.yml
adapter/: README.md  pyproject.toml
adapter/adapter/: base.py  mock_adapter.py  types.py
adapter/tests/: conftest.py  test_async_race.py  test_idempotency.py  test_mock_adapter.py
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_knowledge.py  0002_fk_cascade.py  0003_tasks_executions.py  0004_hitl_plans_approvals.py  0005_personal_corrections.py  0006_active_lineage_unique.py  0007_task_steps.py  0008_eval_v2.py  0009_eval_ranking_metrics.py  0010_boundary_respect.py  0011_rename_workflow_identifier.py
backend/backend/: chunker.py  config.py  coreloop.py  corrections.py  db.py  embedding.py  eval_dataset.py  eval_runner.py  eval_transient.py  growth_eval.py  ingest.py  models.py  ollama_client.py  retrieval.py  retrieval_eval.py  slotfill.py
backend/backend/agent/: app.py  manager.py  observer.py  repository.py  router.py  schemas.py  service.py  ws.py
backend/backend/manuals/: shukko_manual.md
backend/tests/: conftest.py  test_agent_api.py  test_agent_ws.py  test_async_race.py  test_coreloop.py  test_correction_override_demo.py  test_correction_versioning.py  test_corrections.py  test_decision_endpoints.py  test_dedup_conflict.py  test_embedding.py  test_eval_runner.py  test_eval_schema.py  test_eval_transient.py  test_grounding_wiring.py  test_growth_eval.py  test_idempotency.py  test_ingest.py  test_lifecycle.py  test_parse_retry.py  test_plan_endpoint.py  test_refusal_gate.py  test_refusal_reason.py  test_replan.py  test_resilience.py  test_retrieval.py  test_retrieval_eval.py  test_retrieval_metrics.py  test_revise_immunity.py  test_schema_hitl.py  test_schema_personal_corrections.py  test_schema_tasks.py  test_seed_startup.py  test_slotfill.py  test_slotfill_ollama.py  test_static_serving.py  test_task_steps.py  test_w1_capstone.py  test_workflow_rename.py
mock-as400/: Dockerfile  README.md  pyproject.toml
mock-as400/alembic/: env.py
mock-as400/alembic/versions/: 0001_init.py  0002_session_and_proj.py  0003_trip_idempotency_key.py
mock-as400/app/: db.py  main.py  models.py  schemas.py  statemachine.py
mock-as400/tests/: conftest.py  test_golden_replay.py  test_health.py  test_idempotency.py  test_read_purity.py  test_render_delay.py  test_session_flow.py  test_statemachine.py  test_trip_roundtrip.py
(+59 files in other folders)
