[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adapter"
version = "0.1.0"
description = "Tanomude screen adapter seam (read_screen / send_keys / assert_state, design section 2-1)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["adapter"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
