[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adapter"
version = "0.1.0"
description = "Tanomude screen adapter seam (read_screen / send_keys / assert_state)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["adapter"]

# Tests are an in-process contract test against the mock-as400 app: they import `app`
# and require mock-as400 installed in the same env (CI installs it first). Not standalone.
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
